# cmake_demo

./: .gitignore  CMakeLists.txt  README.md  config.cmake  main.cpp  toolchain_CLANG.cmake  toolchain_GCC.cmake  toolchain_MINGW_GCC.cmake
include/: methods.h
src/: methods.cpp
test/: CMakeLists.txt  test.cpp
